[gd_scene load_steps=8 format=2]

[ext_resource path="res://Options.gd" type="Script" id=1]
[ext_resource path="res://Absolute Xero.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Grey_thumb.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 512.0
margin_bottom = 300.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 4 )
text = "OPTIONS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fps" type="Label" parent="."]
visible = false
margin_right = 52.0
margin_bottom = 48.0
theme = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Label" parent="."]
margin_top = 160.0
margin_right = 212.0
margin_bottom = 180.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 4 )
text = "Fullescreen"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vsync" type="Label" parent="."]
margin_top = 288.0
margin_right = 112.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 4 )
text = "Vsync"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowFPS" type="Label" parent="."]
margin_top = 224.0
margin_right = 156.0
margin_bottom = 248.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 4 )
text = "show fps"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 24.0
margin_top = 120.0
margin_right = 992.0
margin_bottom = 576.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 552.0
margin_right = 192.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_right = 168.0
margin_bottom = 24.0
text = "Back"

[node name="Full" type="CheckBox" parent="."]
margin_left = 904.0
margin_top = 160.0
margin_right = 928.0
margin_bottom = 186.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="CheckBox" parent="."]
margin_left = 904.0
margin_top = 224.0
margin_right = 928.0
margin_bottom = 250.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vsy" type="CheckBox" parent="."]
margin_left = 904.0
margin_top = 288.0
margin_right = 928.0
margin_bottom = 314.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Full" to="." method="_on_Full_pressed"]
[connection signal="pressed" from="FPS" to="." method="_on_FPS_pressed"]
[connection signal="pressed" from="Vsy" to="." method="_on_Vsy_pressed"]
